==> NAMeC-team/ssl_mbed_brushless/src/TARGET_SSL_BRUSHLESS_F103/motor_ssl_brushless.cpp <==
#include "motor_ssl_brushless.h"

void MotorSSLBrushless::init() {

    // Init GPIOS HALL and Enables
    init_gpios();

    // Init TIMER1 and thus all pwm
    init_pwms();

    // Init interruptions
    init_interrupt();

    // enable all timer channels
    //    LL_TIM_EnableCounter(TIM1);
    //    LL_TIM_CC_EnableChannel(TIM1, LL_TIM_CHANNEL_CH1);
    //    LL_TIM_CC_EnableChannel(TIM1, LL_TIM_CHANNEL_CH2);
    //    LL_TIM_CC_EnableChannel(TIM1, LL_TIM_CHANNEL_CH3);

    //    __TIM1_CLK_ENABLE();
    //    __HAL_RCC_TIM1_CLK_ENABLE();
    //    HAL_TIM_Base_Init(&htim1);

    HAL_TIM_Base_Start(&htim1);
    HAL_TIM_PWM_Start(&htim1, TIM_CHANNEL_1);
    HAL_TIM_PWM_Start(&htim1, TIM_CHANNEL_2);
    HAL_TIM_PWM_Start(&htim1, TIM_CHANNEL_3);

    // Be sure all pwm alpha are 0
    //    LL_TIM_OC_SetCompareCH1(TIM1, 0);
    //    LL_TIM_OC_SetCompareCH2(TIM1, 0);
    //    LL_TIM_OC_SetCompareCH3(TIM1, 0);
    __HAL_TIM_SET_COMPARE(&htim1, TIM_CHANNEL_1, 0);
    __HAL_TIM_SET_COMPARE(&htim1, TIM_CHANNEL_2, 0);
    __HAL_TIM_SET_COMPARE(&htim1, TIM_CHANNEL_3, 0);

    // force preaload register sync
    //    LL_TIM_GenerateEvent_UPDATE(TIM1);

    // Outputs begin
    //    LL_TIM_EnableAllOutputs(TIM1);

    // Update HALL sector at least one time
    _motor_control_update_sector();
    _motor_control_update_pwm(_sector, _pwm_value);
}

void MotorSSLBrushless::init_pwms() {
    // TIMER 1 INITIALISATION (From STM32CubeMX)
    //    LL_TIM_InitTypeDef TIM_InitStruct = { 0 };
    //    LL_TIM_OC_InitTypeDef TIM_OC_InitStruct = { 0 };
    //    LL_TIM_BDTR_InitTypeDef TIM_BDTRInitStruct = { 0 };
    //
    //    LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM1);
    //
    //    TIM_InitStruct.Prescaler = 0;
    //    TIM_InitStruct.CounterMode = LL_TIM_COUNTERMODE_UP;
    //    TIM_InitStruct.Autoreload = 1000;
    //    TIM_InitStruct.ClockDivision = LL_TIM_CLOCKDIVISION_DIV1;
    //    TIM_InitStruct.RepetitionCounter = 0;
    //    LL_TIM_Init(TIM1, &TIM_InitStruct);
    //    LL_TIM_DisableARRPreload(TIM1);
    //    LL_TIM_SetClockSource(TIM1, LL_TIM_CLOCKSOURCE_INTERNAL);
    //    LL_TIM_OC_EnablePreload(TIM1, LL_TIM_CHANNEL_CH1);
    //    TIM_OC_InitStruct.OCMode = LL_TIM_OCMODE_PWM1;
    //    TIM_OC_InitStruct.OCState = LL_TIM_OCSTATE_DISABLE;
    //    TIM_OC_InitStruct.OCNState = LL_TIM_OCSTATE_DISABLE;
    //    TIM_OC_InitStruct.CompareValue = 0;
    //    TIM_OC_InitStruct.OCPolarity = LL_TIM_OCPOLARITY_HIGH;
    //    TIM_OC_InitStruct.OCNPolarity = LL_TIM_OCPOLARITY_HIGH;
    //    TIM_OC_InitStruct.OCIdleState = LL_TIM_OCIDLESTATE_LOW;
    //    TIM_OC_InitStruct.OCNIdleState = LL_TIM_OCIDLESTATE_LOW;
    //    LL_TIM_OC_Init(TIM1, LL_TIM_CHANNEL_CH1, &TIM_OC_InitStruct);
    //    LL_TIM_OC_DisableFast(TIM1, LL_TIM_CHANNEL_CH1);
    //    LL_TIM_OC_EnablePreload(TIM1, LL_TIM_CHANNEL_CH2);
    //    LL_TIM_OC_Init(TIM1, LL_TIM_CHANNEL_CH2, &TIM_OC_InitStruct);
    //    LL_TIM_OC_DisableFast(TIM1, LL_TIM_CHANNEL_CH2);
    //    LL_TIM_OC_EnablePreload(TIM1, LL_TIM_CHANNEL_CH3);
    //    LL_TIM_OC_Init(TIM1, LL_TIM_CHANNEL_CH3, &TIM_OC_InitStruct);
    //    LL_TIM_OC_DisableFast(TIM1, LL_TIM_CHANNEL_CH3);
    //    LL_TIM_SetTriggerOutput(TIM1, LL_TIM_TRGO_ENABLE); //
    //    LL_TIM_DisableExternalClock(TIM1);
    //    //    LL_TIM_ConfigETR(TIM1,
    //    //            LL_TIM_ETR_POLARITY_NONINVERTED,
    //    //            LL_TIM_ETR_PRESCALER_DIV1,
    //    //            LL_TIM_ETR_FILTER_FDIV1);
    //    //    LL_TIM_SetTriggerOutput(TIM1, LL_TIM_TRGO_RESET);
    //    //    LL_TIM_SetTriggerOutput2(TIM1, LL_TIM_TRGO2_RESET);
    //    LL_TIM_DisableMasterSlaveMode(TIM1);
    //    TIM_BDTRInitStruct.OSSRState = LL_TIM_OSSR_DISABLE;
    //    TIM_BDTRInitStruct.OSSIState = LL_TIM_OSSI_DISABLE;
    //    TIM_BDTRInitStruct.LockLevel = LL_TIM_LOCKLEVEL_OFF;
    //    TIM_BDTRInitStruct.DeadTime = 0;
    //    TIM_BDTRInitStruct.BreakState = LL_TIM_BREAK_DISABLE;
    //    TIM_BDTRInitStruct.BreakPolarity = LL_TIM_BREAK_POLARITY_HIGH;
    //    //    TIM_BDTRInitStruct.BreakFilter = LL_TIM_BREAK_FILTER_FDIV1;
    //    //    TIM_BDTRInitStruct.Break2State = LL_TIM_BREAK2_DISABLE;
    //    //    TIM_BDTRInitStruct.Break2Polarity = LL_TIM_BREAK2_POLARITY_HIGH;
    //    //    TIM_BDTRInitStruct.Break2Filter = LL_TIM_BREAK2_FILTER_FDIV1;
    //    TIM_BDTRInitStruct.AutomaticOutput = LL_TIM_AUTOMATICOUTPUT_DISABLE;
    //    LL_TIM_BDTR_Init(TIM1, &TIM_BDTRInitStruct);
    //
    //    // PWM OUTPUT INIT
    //    LL_GPIO_InitTypeDef GPIO_InitStruct = { 0 };
    //    //    LL_AHB2_GRP1_EnableClock(LL_AHB2_GRP1_PERIPH_GPIOA);
    //    LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_GPIOA); //
    //    /**TIM1 GPIO Configuration
    //    PA8     ------> TIM1_CH1
    //    PA9     ------> TIM1_CH2
    //    PA10     ------> TIM1_CH3
    //    */
    //    GPIO_InitStruct.Pin = LL_GPIO_PIN_8 | LL_GPIO_PIN_9 | LL_GPIO_PIN_10;
    //    GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
    //    GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_LOW;
    //    GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
    //    //    GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
    //    //    GPIO_InitStruct.Alternate = LL_GPIO_AF_1;
    //    LL_GPIO_Init(GPIOA, &GPIO_InitStruct);

    __HAL_RCC_TIM1_CLK_ENABLE();

    TIM_ClockConfigTypeDef sClockSourceConfig = { 0 };
    TIM_MasterConfigTypeDef sMasterConfig = { 0 };
    TIM_OC_InitTypeDef sConfigOC = { 0 };
    TIM_BreakDeadTimeConfigTypeDef sBreakDeadTimeConfig = { 0 };

    /**
     * For STM32F103RBT6, when HSI is used as clock source generator,
     * Mbed will configure APB2CLK Clock frequency output at:
     *  - 48MHz if USBDEVICE is used (by default)
     *  - 64Mhz if not.
     *
     * To get 40kHz frequency, this should be configured:
     *  - 48MHz -> prescal = 0, period = 1200
     *  - 64MHz -> prescal = 0, period = 1600
     *
     * If you want to remove USBDEVICE to get a better period:
     *  - In custom_targets.json, remove the bloc: << "device_has_add": ["USBDEVICE"], >>
     *  - In mbed_app.json, remove: << "drivers-usb" >>
     *  - In main.cpp, remove any code using the USBSerial.
     *
     */

    htim1.Instance = TIM1;
    htim1.Init.Prescaler = 0;
    htim1.Init.CounterMode = TIM_COUNTERMODE_UP;
#if (DEVICE_USBDEVICE)
    htim1.Init.Period = 1200;
#else
    htim1.Init.Period = 1600;
#endif
    htim1.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
    htim1.Init.RepetitionCounter = 0;
    htim1.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_DISABLE;
    if (HAL_TIM_Base_Init(&htim1) != HAL_OK) {
        while (true)
            ;
    }
    sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
    if (HAL_TIM_ConfigClockSource(&htim1, &sClockSourceConfig) != HAL_OK) {
        while (true)
            ;
    }
    if (HAL_TIM_PWM_Init(&htim1) != HAL_OK) {
        while (true)
            ;
    }
    sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
    sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
    if (HAL_TIMEx_MasterConfigSynchronization(&htim1, &sMasterConfig) != HAL_OK) {
        while (true)
            ;
    }
    sConfigOC.OCMode = TIM_OCMODE_PWM1;
    sConfigOC.Pulse = 0;
    sConfigOC.OCPolarity = TIM_OCPOLARITY_HIGH;
    sConfigOC.OCNPolarity = TIM_OCNPOLARITY_HIGH;
    sConfigOC.OCFastMode = TIM_OCFAST_DISABLE;
    sConfigOC.OCIdleState = TIM_OCIDLESTATE_RESET;
    sConfigOC.OCNIdleState = TIM_OCNIDLESTATE_RESET;
    if (HAL_TIM_PWM_ConfigChannel(&htim1, &sConfigOC, TIM_CHANNEL_1) != HAL_OK) {
        while (true)
            ;
    }
    //    __HAL_TIM_ENABLE_OCxPRELOAD(&htim1, TIM_CHANNEL_1);
    if (HAL_TIM_PWM_ConfigChannel(&htim1, &sConfigOC, TIM_CHANNEL_2) != HAL_OK) {
        while (true)
            ;
    }
    //    __HAL_TIM_ENABLE_OCxPRELOAD(&htim1, TIM_CHANNEL_2);
    if (HAL_TIM_PWM_ConfigChannel(&htim1, &sConfigOC, TIM_CHANNEL_3) != HAL_OK) {
        while (true)
            ;
    }
    //    __HAL_TIM_ENABLE_OCxPRELOAD(&htim1, TIM_CHANNEL_3);
    sBreakDeadTimeConfig.OffStateRunMode = TIM_OSSR_DISABLE;
    sBreakDeadTimeConfig.OffStateIDLEMode = TIM_OSSI_DISABLE;
    sBreakDeadTimeConfig.LockLevel = TIM_LOCKLEVEL_OFF;
    sBreakDeadTimeConfig.DeadTime = 0;
    sBreakDeadTimeConfig.BreakState = TIM_BREAK_DISABLE;
    sBreakDeadTimeConfig.BreakPolarity = TIM_BREAKPOLARITY_HIGH;
    sBreakDeadTimeConfig.AutomaticOutput = TIM_AUTOMATICOUTPUT_DISABLE;
    if (HAL_TIMEx_ConfigBreakDeadTime(&htim1, &sBreakDeadTimeConfig) != HAL_OK) {
        while (true)
            ;
    }
    /* USER CODE BEGIN TIM1_Init 2 */

    //    __HAL_TIM_ENABLE(&htim1);

    GPIO_InitTypeDef GPIO_InitStruct = { 0 };
    __HAL_RCC_GPIOA_CLK_ENABLE();
    GPIO_InitStruct.Pin = GPIO_PIN_8 | GPIO_PIN_9 | GPIO_PIN_10;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
}

static inline void _motor_control_set_HZ(motor_control_phase_drive_t phase) {
    *(phase.pwm_compare_register) = 0;
    //    LL_GPIO_ResetOutputPin(phase.en_port, phase.en_pin);
    HAL_GPIO_WritePin(phase.en_port, phase.en_pin, GPIO_PIN_RESET);
}

static inline void _motor_control_set_ground(motor_control_phase_drive_t phase) {
    *(phase.pwm_compare_register) = 0;
    // LL_TIM_GenerateEvent_UPDATE(TIM1);
    //    LL_GPIO_SetOutputPin(phase.en_port, phase.en_pin);
    HAL_GPIO_WritePin(phase.en_port, phase.en_pin, GPIO_PIN_SET);
}

static inline void _motor_control_set_pwm(motor_control_phase_drive_t phase, uint32_t pwm_value) {
    *(phase.pwm_compare_register) = pwm_value;
    // LL_TIM_GenerateEvent_UPDATE(TIM1);
    //    LL_GPIO_SetOutputPin(phase.en_port, phase.en_pin);
    HAL_GPIO_WritePin(phase.en_port, phase.en_pin, GPIO_PIN_SET);
}
